--- a/WaterGasTool.csproj
+++ b/WaterGasTool.csproj
@@ -71,6 +71,12 @@
       <DependentUpon>ConfigEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Loghandler.cs" />
+    <Compile Include="MeterUploadPOP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MeterUploadPOP.Designer.cs">
+      <DependentUpon>MeterUploadPOP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLQueries.cs" />
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConfigEditor.resx">
       <DependentUpon>ConfigEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MeterUploadPOP.resx">
+      <DependentUpon>MeterUploadPOP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
